tests/errors/module_nonrec/module_nonrec.fs
module module_nonrec.Program
//    ^ Non recursive module is unimplemented yet.

let main _ = 0
